[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paynode-sdk"
version = "1.0.0"
description = "SDK for PayNode Protocol"
dependencies = [
    "web3>=6.0.0",
    "requests>=2.28.0",
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
include = ["paynode_sdk*"]
