[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paynode-sdk-python"
version = "2.1.0"
description = "PayNode Protocol Python SDK for AI Agents"
readme = "README.md"
authors = [{ name = "PayNodeLabs", email = "contact@paynode.dev" }]
license = { text = "MIT" }
keywords = ["paynode", "x402", "base", "agentic-web3", "payments"]
dependencies = [
    "requests>=2.31.0",
    "web3>=6.15.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/PayNodeLabs/paynode-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["paynode_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
